Bug 415601 Fix crash caused by creating an illegal selection r+sr=dmose